--- a/PetApp_Empresa/Views/Auth/Register.cshtml
+++ b/PetApp_Empresa/Views/Auth/Register.cshtml
@@ -49,11 +49,7 @@
 
 <div class="carousel-container">
     <div class="carousel">
-        <img src="https://p4.wallpaperbetter.com/wallpaper/842/447/739/dogs-1366x768-animals-dogs-hd-art-wallpaper-preview.jpg" alt="Imagen 1">
-        <img src="https://img3.wallspic.com/crops/5/1/6/4/7/174615/174615-perro-gran_dans-perro_pug-pug-bulldog-1366x768.jpg" alt="Imagen 2">
-        <img src="https://img1.wallspic.com/crops/1/1/6/5/5/155611/155611-ridgeback_de_rodesia-pastor_aleman-cane_corso-raza_de_perro-cachorro-1366x768.jpg" alt="Imagen 3">
-        <img src="https://img1.wallspic.com/crops/5/8/1/5/95185/95185-cachorro_de_husky_siberiano_blanco_tirado_en_el_suelo-1366x768.jpg" alt="Imagen 4">
-        <img src="https://img3.wallspic.com/crops/2/6/5/6/5/156562/156562-perro-pastor_australiano-raza_de_perro-gato-canidae-1366x768.jpg" alt="Imagen 5">
+        <img src="https://placeresbolivia.com/wp-content/uploads/2021/10/Univalle-1.jpg" alt="Imagen de fondo">
     </div>
 </div>
 
@@ -81,7 +77,9 @@
         margin: 0;
         padding: 0;
         height: 100vh;
-        background-color: #C03540; /* Fondo rojo */
+        background: url('https://placeresbolivia.com/wp-content/uploads/2021/10/Univalle-1.jpg') no-repeat center center fixed;
+        background-size: cover;
+        color: white;
         overflow: hidden;
     }
 
@@ -95,30 +93,19 @@
         z-index: -1;
     }
 
-    .carousel {
-        position: relative;
+    .carousel img {
+        position: absolute;
         width: 100%;
         height: 100%;
+        object-fit: cover;
+        transition: opacity 1s ease-in-out;
+        opacity: 0.8;
+        filter: brightness(50%);
     }
-
-        .carousel img {
-            position: absolute;
-            width: 100%;
-            height: 100%;
-            object-fit: cover;
-            transition: opacity 1s ease-in-out;
-            opacity: 0;
-            /* Filtro rojizo */
-            filter: brightness(30%) sepia(1) hue-rotate(-30deg) saturate(3);
-        }
-
-            .carousel img:first-child {
-                opacity: 1;
-            }
 
     .card {
         border-radius: 10px;
-        background-color: #C03540; /* Rojo */
+        background-color: rgba(192, 53, 64, 0.9); /* Fondo semitransparente */
         padding: 20px;
         z-index: 1;
     }
@@ -134,7 +121,7 @@
             top: -20px;
             left: 50%;
             transform: translateX(-50%);
-            background-color: #C03540; /* Rojo */
+            background-color: rgba(192, 53, 64, 0.9);
             color: #FFFFFF; /* Blanco */
             font-weight: bold;
             font-size: 0.9rem;
